fixed spacing issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,8 @@ main {
     justify-content: center;
     align-items: center;
     a {
+      margin-top: -30px;
+      padding-bottom: 40px;
       text-decoration: none;
       color: rgba(255, 255, 255, 0.9);
       font-size: max(3vw, 24px);
